--- a/GivrsApp/app/src/main/res/values/strings.xml
+++ b/GivrsApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GivrsApp</string>
     <string name="action_settings">Settings</string>
+    <string name="reade_more">Read more...</string>
 </resources>
